# lark-translator

./: README.md  pyproject.toml
lark_translator/: __init__.py  translator.py
tests/: test.json  test_lark_translator.py
tests/grammars/: json-xml.lark  json.lark
